--- a/parceiros.html
+++ b/parceiros.html
@@ -96,6 +96,15 @@
       <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
         <img src="p_vougafrio.png" alt="vougafrio">
       </a>
+      <a href="https://www.instagram.com/energiaemequilibrio/" target="_blank">
+        <img src="p_energia.jpg" alt="energia">
+      </a>
+      <a href="https://www.instagram.com/andreia.professional/" target="_blank">
+        <img src="p_andreia.png" alt="andreia">
+      </a>
+      <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
+        <img src="p_leixoes.png" alt="leixoes">
+      </a>
 
     </div>
   </main>
