--- a/index.html
+++ b/index.html
@@ -69,29 +69,68 @@
     </section>
     <section class="patrocinadores-carousel">
       <div class="carousel-track" id="carousel-track">
-        <img src="p_maribar.png" alt="Maribar">
-        <img src="p_avenida.png" alt="Restaurante Avenida da Praia">
-        <img src="p_aasm.png" alt="AASM">
-        <img src="p_fabridoce.png" alt="Fabridoce">
-        <img src="p_ffonseca.png" alt="ffonseca">
-        <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
-        <img src="p_vougafrio.png" alt="vougafrio">
-        <!-- repete os logos se quiseres efeito infinito mais suave -->
-        <img src="p_maribar.png" alt="Maribar1">
-        <img src="p_avenida.png" alt="Restaurante Avenida da Praia1">
-        <img src="p_aasm.png" alt="AASM1">
-        <img src="p_fabridoce.png" alt="Fabridoce1">
-        <img src="p_ffonseca.png" alt="ffonseca1">
-        <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
-        <img src="p_vougafrio.png" alt="vougafrio1">
+        <a href="https://www.instagram.com/maribartorreira/" target="_blank">
+          <img src="p_maribar.png" alt="Maribar">
+        </a>
+        <a href="https://www.instagram.com/avenida_praia/" target="_blank">
+          <img src="p_avenida.png" alt="Restaurante Avenida da Praia">
+        </a>
+        <a href="https://www.instagram.com/aasmvoleibol/" target="_blank">
+          <img src="p_aasm.png" alt="AASM">
+        </a>
+        <a href="https://www.instagram.com/fabridoce_doces.regionais/" target="_blank">
+          <img src="p_fabridoce.png" alt="Fabridoce">
+        </a>
+        <a href="https://www.instagram.com/f.fonseca_sa/" target="_blank">
+          <img src="p_ffonseca.png" alt="ffonseca">
+        </a>
+        <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
+          <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
+        </a>
+        <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
+          <img src="p_vougafrio.png" alt="vougafrio">
+        </a>
+        <a href="https://www.instagram.com/andreia.professional/" target="_blank">
+          <img src="p_andreia.png" alt="andreia">
+        </a>
+        <a href="https://www.instagram.com/energiaemequilibrio/" target="_blank">
+          <img src="p_energia.jpg" alt="energia">
+        </a>
+        <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
+          <img src="p_leixoes.png" alt="leixoes">
+        </a>
 
-        <img src="p_maribar.png" alt="Maribar2">
-        <img src="p_avenida.png" alt="Restaurante Avenida da Praia2">
-        <img src="p_aasm.png" alt="AASM2">
-        <img src="p_fabridoce.png" alt="Fabridoce2">
-        <img src="p_ffonseca.png" alt="ffonseca2">
-        <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro2">
-        <img src="p_vougafrio.png" alt="vougafrio2">
+        <!-- Repetição para efeito contínuo -->
+        <a href="https://www.instagram.com/maribartorreira/" target="_blank">
+          <img src="p_maribar.png" alt="Maribar1">
+        </a>
+        <a href="https://www.instagram.com/avenida_praia/" target="_blank">
+          <img src="p_avenida.png" alt="Restaurante Avenida da Praia1">
+        </a>
+        <a href="https://www.instagram.com/aasmvoleibol/" target="_blank">
+          <img src="p_aasm.png" alt="AASM1">
+        </a>
+        <a href="https://www.instagram.com/fabridoce_doces.regionais/" target="_blank">
+          <img src="p_fabridoce.png" alt="Fabridoce1">
+        </a>
+        <a href="https://www.instagram.com/f.fonseca_sa/" target="_blank">
+          <img src="p_ffonseca.png" alt="ffonseca1">
+        </a>
+        <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
+          <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro1">
+        </a>
+        <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
+          <img src="p_vougafrio.png" alt="vougafrio1">
+        </a>
+        <a href="https://www.instagram.com/andreia.professional/" target="_blank">
+          <img src="p_andreia.png" alt="andreia1">
+        </a>
+        <a href="https://www.instagram.com/energiaemequilibrio/" target="_blank">
+          <img src="p_energia.jpg" alt="energia1">
+        </a>
+        <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
+          <img src="p_leixoes.png" alt="leixoes1">
+        </a>
       </div>
     </section>
 
