--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/jpeg" href="logo.JPG">
 
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="FSfuuy2vy6_tQCTz0u09PcG9jWCNpIX1jEKlKlFADeM" />
   <title>Torneio Maribar</title>
   <link rel="stylesheet" href="style.css">
 </head>
