--- a/calendarios.html
+++ b/calendarios.html
@@ -2,6 +2,15 @@
 <html lang="pt">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J18PX75N4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9J18PX75N4');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Calendários & Resultados - Torneio Maribar</title>
@@ -416,10 +425,10 @@
 
     setInterval(mostrarProximaImagem, 3000); // troca a cada 3 segundos
   </script>
-  
+
 </body>
 <footer>
-  
+
   <p>
     &copy; Torneio de Voleibol de Praia no Maribar |
     <a href="apresentacao.html">📊 Apresentação</a> |
