--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="pt">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J18PX75N4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9J18PX75N4');
+  </script>
+
   <link rel="icon" type="image/jpeg" href="logo-torneio-maribar-2025.jpg">
   <title>Torneio Maribar 2025 - Voleibol de Praia na Torreira</title>
   <meta charset="UTF-8">
