--- a/informacoes.html
+++ b/informacoes.html
@@ -2,6 +2,15 @@
 <html lang="pt">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J18PX75N4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9J18PX75N4');
+  </script>
   <link rel="icon" type="image/jpeg" href="logo.JPG">
 
   <meta charset="UTF-8">
