--- a/calendarios1.html
+++ b/calendarios1.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <h1 style="display: flex; align-items: center; gap: 10px;">
-          <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
+          <img src="logo-torneio-maribar-2025.jpg" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
           Torneio Maribar
         </h1>
         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -37,12 +37,12 @@
       <h3>Selecione o Torneio que pretende ver:</h3>
       <ul>
         <li><a href="c_masculino.html">Torneio Masculino - para testes</a></li>
-        <li><a href="calendarios/feminino.html">Torneio Feminino</a></li>
-        <li><a href="calendarios/mistos.html">Torneio Mistos</a></li>
-        <li><a href="calendarios/sub16.html">Torneio Sub-16</a></li>
-        <li><a href="/calendarios/taca-masc.html">Taça Maribar Masculina</a></li>
-        <li><a href="/calendarios/taca-fem.html">Taça Maribar Feminina</a></li>
-        <li><a href="/calendarios/taca-mix.html">Taça Maribar Mista</a></li>
+        <li><a href="c_feminino.html">Torneio Feminino</a></li>
+        <li><a href="c_mistos.html">Torneio Mistos</a></li>
+        <li><a href="c_sub16.html">Torneio Sub-16</a></li>
+        <li><a href="c_taca-masc.html">Taça Maribar Masculina</a></li>
+        <li><a href="c_taca-fem.html">Taça Maribar Feminina</a></li>
+        <li><a href="c_taca-mix.html">Taça Maribar Mista</a></li>
       </ul>
     </section>
 
