--- a/edicoes-passadas.html
+++ b/edicoes-passadas.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <h1 style="display: flex; align-items: center; gap: 10px;">
-        <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
+        <img src="logo-torneio-maribar-2025.jpg" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -107,7 +107,9 @@
       <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
         <img src="p_leixoes.png" alt="leixoes">
       </a>
-
+      <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
+        <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
+      </a>
       <!-- Repetição para efeito contínuo -->
       <a href="https://www.instagram.com/maribartorreira/" target="_blank">
         <img src="p_maribar.png" alt="Maribar1">
