--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,7 @@
   <header>
     <nav>
       <h1 style="display: flex; align-items: center; gap: 10px;">
-        <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
+        <img src="logo-torneio-maribar-2025.jpg" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
