--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="description"
     content="O Torneio Maribar é um dos maiores eventos de voleibol de praia em Portugal. Descobre as duplas inscritas, calendário e resultados!">
   <meta name="keywords"
-    content="torneio, voleibol, voleibol de praia, praia, torreira, maribar, 2025, duplas, duplas masculinas, duplas mistas, duplas femininas, torneio maribar, voleibol portugal, praia da torreira, torneio voleibol praia">
+    content="torneio, voleibol, voleibol de praia, praia, torreira, maribar, 2025, duplas, duplas masculinas, duplas mistas, duplas femininas, sub-16, sub16, torneio maribar, voleibol portugal, praia da torreira, torneio voleibol praia, torneio voleibol de praia, volley, beachvolley, beach volleyball, volleyball, torneios, eventos, desporto, diversão, amizade, fair-play, torneio e copos, torneio de duplas, torneio de duplas de praia, torneio de duplas de praia em Portugal, torreira maribar, maribar torreira, torreira praia, praia torreira, torreira volleyball, torreira beach volleyball">
 
   <meta property="og:title" content="Torneio Maribar 2025 - Voleibol de Praia na Torreira">
   <meta property="og:description"
@@ -27,7 +27,6 @@
   <meta property="og:image" content="https://torneiomaribar.netlify.app/cartaz-maribar-2025.jpg">
   <meta property="og:url" content="https://torneiomaribar.netlify.app/">
   <meta property="og:type" content="website">
-
 
 
   <link rel="stylesheet" href="style.css">
@@ -127,6 +126,9 @@
         <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
           <img src="p_leixoes.png" alt="leixoes">
         </a>
+        <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
+          <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
+        </a>
 
         <!-- Repetição para efeito contínuo -->
         <a href="https://www.instagram.com/maribartorreira/" target="_blank">
@@ -158,6 +160,9 @@
         </a>
         <a href="https://www.instagram.com/leixoessportclub/" target="_blank">
           <img src="p_leixoes.png" alt="leixoes1">
+        </a>
+        <a href="https://www.instagram.com/municipiodamurtosa/" target="_blank">
+          <img src="p_cmm.png" alt="Camara Municpal da Murtosa1">
         </a>
       </div>
     </section>
