--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <h1 style="display: flex; align-items: center; gap: 10px;">
-        <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
+        <img src="logo-torneio-maribar-2025.jpg" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -43,7 +43,7 @@
         participantes, voluntários e apoiantes.</p>
 
       <p><strong>🙏 Agradecemos aos nossos parceiros e amigos</strong>, sem os quais este torneio não seria possível.
-        </p>
+      </p>
       <p>
         <a href="parceiros.html" style="color: #004080; font-weight: bold;">Conhece os nossos parceiros </a>
       </p>
