--- a/parceiros.html
+++ b/parceiros.html
@@ -48,7 +48,7 @@
   <header>
     <nav>
       <h1 style="display: flex; align-items: center; gap: 10px;">
-        <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
+        <img src="logo-torneio-maribar-2025.jpg" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -77,7 +77,14 @@
 
     <p class="parceiros-principal">Parceiros de Ouro</p>
     <div class="parceiros-grid">
-      <a href="https://www.instagram.com/avenida_praia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+      <a href="https://www.instagram.com/municipiodamurtosa/"
+        target="_blank">
+        <img src="p_cmm.png" alt="Camara Municpal da Murtosa">
+      </a>
+      <a href="https://www.instagram.com/f.fonseca_sa/" target="_blank">
+        <img src="p_ffonseca.png" alt="ffonseca">
+      </a>
+      <a href="https://www.instagram.com/avenida_praia/"
         target="_blank">
         <img src="p_avenida.png" alt="Restaurante Avenida da Praia">
       </a>
@@ -86,9 +93,6 @@
       </a>
       <a href="https://www.instagram.com/fabridoce_doces.regionais/" target="_blank">
         <img src="p_fabridoce.png" alt="Fabridoce">
-      </a>
-      <a href="https://www.instagram.com/f.fonseca_sa/" target="_blank">
-        <img src="p_ffonseca.png" alt="ffonseca">
       </a>
       <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
         <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
