--- a/informacoes.html
+++ b/informacoes.html
@@ -74,16 +74,24 @@
       </ul>
 
       <h3>🏕️ Alojamento</h3>
-      <p>O <strong>Camping Torreira Park</strong>, a apenas 800 metros da praia, oferece descontos para os
-        participantes.</p>
-      <p>Se tiveres acompanhantes que <strong>não jogam</strong>, indica essa informação nas observações da inscrição.
-      </p>
+      <p>O <strong>Camping Torreira Park</strong>, a apenas 800 metros da praia, oferece descontos para os participantes.</p>
+      <p>Se tiveres acompanhantes que <strong>não jogam</strong>, indica essa informação nas observações da inscrição.</p>
 
       <h3>📥 Inscrições</h3>
-      <p><strong>Já estão abertas!</strong></p>
-      <p><a href="https://bit.ly/inscricoestorneiomaribar2025" target="_blank">📄 Clica aqui para te inscreveres</a></p>
+     
+        <strong>✅ Inscrições Encerradas!</strong><br>
+        Alcançámos o número máximo de duplas:
+        <ul style="margin-top: 5px;">
+          <li>64 duplas <strong>masculinas</strong></li>
+          <li>64 duplas <strong>mistas</strong></li>
+          <li>32 duplas <strong>femininas</strong></li>
+          <li>8 duplas <strong>sub-16</strong></li>
+        </ul>
+        Obrigado a todos pela enorme adesão! Encontramo-nos no <strong>dia 2 de agosto às 8h30</strong> 🌞🏐
+  
     </section>
   </main>
+
   <script>
     function toggleMenu() {
       const menu = document.getElementById("nav-menu");
