--- a/c_sub16.html
+++ b/c_sub16.html
@@ -38,9 +38,14 @@
 
       <h3>Quadro Competitivo</h3>
       <p style="color: #444; font-weight: bold; margin-top: 10px;">
-        ℹ️ O quadro competitivo do Torneio Sub-16 está a ser preparado e será disponibilizado brevemente nesta página.
+        ℹ️ Para uma melhor visualização, rode o telemóvel para modo horizontal.
       </p>
-      <p style="font-size: 1.2em; color: #666; margin-top: 30px;">⏳ Em construção…</p>
+
+      <div class="fase">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUIEENURtuEJ52Jr4OjMiNwX44zq7oUaX-dx_KZ7dTWLN2FTh1OmHXznFTWxCRkPTz6Uol-KmK6_pt/pubhtml?gid=1946814567&single=true"
+          width="100%" height="600" style="border:1px solid #ccc;"></iframe>
+      </div>
     </section>
   </main>
 
@@ -57,7 +62,7 @@
     </div>
   </footer>
 
- 
+
   <script>
     function toggleMenu() {
       const menu = document.getElementById("nav-menu");
