--- a/regulamento.html
+++ b/regulamento.html
@@ -82,9 +82,20 @@
 
     <h4>Prémios</h4>
     <ul>
-      <li>1.º Lugar: Vale de Jantar (25€ - Restaurante Avenida da Praia)</li>
-      <li>2.º Lugar: Vale de Lanche (10€ - Maribar)</li>
+      <li><strong>Sub-16:</strong>
+        <ul>
+          <li>1.º Lugar: Taça + Medalhas</li>
+          <li>2.º ao 8.º Lugar: Medalhas</li>
+        </ul>
+      </li>
+      <li><strong>Masculino, Feminino e Misto:</strong>
+        <ul>
+          <li>1.º Lugar: Vale de Jantar (25€ - Restaurante Avenida da Praia)</li>
+          <li>2.º Lugar: Vale de Lanche (10€ - Maribar)</li>
+        </ul>
+      </li>
     </ul>
+
 
     <h4>Taça Maribar</h4>
     <p>Destinada a todas as duplas eliminadas no sábado em todos os tipos.</p>
@@ -110,7 +121,19 @@
       <li>Máximo de <strong>64 duplas</strong> no <strong>Masculino</strong></li>
       <li>Máximo de <strong>64 duplas</strong> no <strong>Misto</strong></li>
       <li>Máximo de <strong>32 duplas</strong> no <strong>Feminino</strong></li>
-      <li>Máximo de <strong>32 duplas</strong> no <strong>Sub-16</strong></li>
+      <li>Máximo de <strong>8 duplas</strong> no <strong>Sub-16</strong></li>
+    </ul>
+    <h4>Alterações de Duplas após Inscrição</h4>
+    <ul>
+      <li>Se ambos os atletas de uma dupla decidirem separar-se e inscrever-se com parceiros diferentes, a dupla perde o direito à vaga inicialmente conquistada. As novas formações serão tratadas como novas inscrições, sujeitas à disponibilidade de vagas no respetivo escalão.</li>
+      <li>Se apenas um dos atletas não puder participar, por motivo de força maior, o atleta remanescente poderá manter a vaga, desde que:
+        <ul>
+          <li>A substituição seja comunicada previamente à organização;</li>
+          <li>O novo parceiro não esteja já inscrito no torneio;</li>
+          <li>A nova dupla respeite os critérios do escalão (idade, género, etc.).</li>
+        </ul>
+      </li>
+     
     </ul>
 
   </main>
