--- a/calendarios1.html
+++ b/calendarios1.html
@@ -122,7 +122,7 @@
       let allRows = [];
 
       function fetchAba(aba, onComplete) {
-        const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=${aba.gid}`;
+        const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=${aba.gid}&_=${Date.now()}`;
         fetch(url)
           .then(res => res.text())
           .then(text => {
